<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.businessapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_small"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginBottom="@dimen/margin_small">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/scoops" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:textColor="@color/icons"
            android:textSize="@dimen/headline"
            android:text="VeBaFood"/>
    </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/fa_regular"
                android:textSize="@dimen/body_normal"
                android:textColor="@color/secondary_text"
                android:text="@string/info"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center_vertical"
                android:textSize="@dimen/body_small"
                android:textColor="@color/primary_text"
                android:text="@string/business_info"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/fa_regular"
                android:textSize="@dimen/body_normal"
                android:textColor="@color/secondary_text"
                android:text="@string/clock" />
            <TextView
                android:id="@+id/opening"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center_vertical"
                android:textSize="@dimen/body_small"
                android:textColor="@color/primary_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/fa_solid"
                android:textSize="@dimen/body_normal"
                android:textColor="@color/secondary_text"
                android:text="@string/globe"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center_vertical"
                android:autoLink="web"
                android:textSize="@dimen/body_small"
                android:textColor="@color/primary_text"
                android:text="@string/link"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/fa_solid"
                android:textSize="@dimen/body_normal"
                android:textColor="@color/secondary_text"
                android:text="@string/map"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center_vertical"
                android:autoLink="map"
                android:textSize="@dimen/body_small"
                android:textColor="@color/primary_text"
                android:text="@string/street"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/fa_solid"
                android:textSize="@dimen/body_normal"
                android:textColor="@color/secondary_text"
                android:text="@string/phone" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center_vertical"
                android:autoLink="phone"
                android:textSize="@dimen/body_small"
                android:textColor="@color/primary_text"
                android:text="+420 604 789 756"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
